# freecad-cli

./: CLI_ANYTHING.md  README.md  agent-harness-TEST.md  pyproject.toml
agent-harness/: FREECAD.md  README.md
agent-harness/cli_anything/freecad/tests/: TEST.md
src/freecad_cli/: cli.py  config.py  rpc.py
