[project]
name = "freecad-cli-local"
version = "0.1.0"
description = "Local CLI wrapper for controlling FreeCAD via freecad-mcp RPC on macOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fc = "freecad_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freecad_cli"]
